<resources>
    <string name="app_name">Name Directory</string>
    <string name="search">search</string>
    <string name="toDark_mood">toDark mood</string>
    <string name="note_indicator">note indicator</string>
    <string name="username">Username</string>
    <string name="details">details</string>
    <string name="follower">Followers:</string>
    <string name="follower_value">65</string>
    <string name="following">Following:</string>
    <string name="following_value">155</string>
    <string name="notes">Biography:</string>
    <string name="imgToolbars">imgToolBars</string>
    <string name="john_smith">John Smith</string>
    <string name="content">Content</string>
    <string name="this_is_me">This is me</string>
    <string name="blog_www_apple_com">Blog: www.apple.com</string>
    <string name="company_apple">Company: Apple</string>
    <string name="name_john_smith">Name: John Smith</string>
    <string name="top_follower">Top Follower:</string>
    <string name="profile">Profile:</string>
    <string name="biography">Biography:</string>
    <string name="label_error">Something went wrong, please try again</string>
    <string name="clear">CLEAR</string>
    <string name="user">User</string>
    <string name="top_members">Top Members</string>
    <string name="internet_problem">Internet Problem</string>
    <string name="would_you_like_to_use_offline">Would you like to use offline?</string>
    <string name="search_result">Search Result</string>
    <string name="retry">Retry</string>
    <string name="msg_token_fmt">AccessToken</string>
    <string name="default_notification_channel_id" translatable="false">com.github.members.directory.dev.notification_channel</string>
</resources>