<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".features.main.MainActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/toolbar_profile_details"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginStart="@dimen/pixels_10"
                android:layout_marginEnd="@dimen/pixels_10"
                android:layout_marginTop="@dimen/pixels_10"
                android:gravity="center">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/imgDetail"
                    android:layout_width="@dimen/pixels_230"
                    android:layout_height="@dimen/pixels_230"
                    android:background="@drawable/ic_main_rectangle"
                    android:scaleType="fitXY"
                    app:riv_corner_radius="5dip"
                    app:riv_mutate_background="true"/>


            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginStart="@dimen/pixels_8"
                android:layout_marginEnd="@dimen/pixels_8">

                <TextView
                    android:id="@+id/txtFollower"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/pixels_40"
                    android:text="@string/follower"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFollowerNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/pixels_8"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:text="@string/follower_value"
                    android:textSize="16sp"
                     />

                <TextView
                    android:id="@+id/txtFollowing"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/pixels_60"
                    android:text="@string/following"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtFollowingNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/pixels_8"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:text="@string/following_value"
                    android:textSize="16sp"/>

            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/pixels_18"
                android:layout_marginStart="@dimen/pixels_16"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/dim_gray_text"
                android:text="@string/top_follower" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/pixels_110"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/pixels_16"
                android:layout_marginStart="@dimen/pixels_16"
                android:background="@drawable/ic_main_rectagle_text"
                android:layout_marginTop="@dimen/pixels_4">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFollowing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:listitem="@layout/item_followers" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/pixels_18"
                android:layout_marginStart="@dimen/pixels_16"
                android:textColor="@color/dim_gray_text"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_regular"
                android:text="@string/profile" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/pixels_90"
                android:orientation="vertical"
                android:layout_marginEnd="@dimen/pixels_16"
                android:layout_marginStart="@dimen/pixels_16"
                android:background="@drawable/ic_main_rectagle_text"
                android:layout_marginTop="@dimen/pixels_4">
                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:text="@string/name_john_smith"
                    android:textSize="16sp"/>
                <TextView
                    android:id="@+id/txtCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:text="@string/company_apple"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/txtBlog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_regular"
                    android:textColor="@color/dim_gray_text"
                    android:text="@string/blog_www_apple_com"
                    android:textSize="15sp"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/pixels_18"
                android:layout_marginStart="@dimen/pixels_16"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/inter_regular"
                android:textColor="@color/dim_gray_text"
                android:text="@string/biography" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/pixels_4"
                android:background="@drawable/ic_main_rectagle_text"
                android:layout_marginEnd="@dimen/pixels_16"
                android:layout_marginStart="@dimen/pixels_16">

                <TextView
                    android:id="@+id/txtBiography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dim_gray_text"
                    android:fontFamily="@font/inter_regular"
                    android:layout_marginTop="@dimen/pixels_8"
                    android:text="@string/this_is_me"
                    android:maxLines="4"
                    android:lines="4"
                    android:textSize="15sp"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/pixels_10"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
